--- a/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-outgoing.html
+++ b/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-outgoing.html
@@ -235,7 +235,7 @@
                                             + `<td class="table-active">` + `</td>`
                                     }
                                     let temp = partInventory[j];
-                                    let calInputAmount = 0
+                                    // let calInputAmount = 0
                                     // let calInputAmount = (bom.remainQTY * temp.usage);
                                     // if (calInputAmount > (temp.lotMax - temp.stockQTY)) {
                                     //     calInputAmount = (temp.lotMax - temp.stockQTY);
@@ -243,12 +243,18 @@
                                     // if (calInputAmount < 0) {
                                     //     calInputAmount = 0;
                                     // }
+                                    let boxQTY;
+                                    if (temp.rop != 0) {
+                                        boxQTY = (temp.stockQTY / temp.rop).toFixed(1);
+                                    } else {
+                                        boxQTY = '-'
+                                    }
                                     html += `<td>` + temp.partBwCode + `</td>`
                                         + `<td>` + temp.rop + `</td>`
-                                        + `<td>` + temp.stockQTY + `</td>`
+                                        + `<td>` + temp.stockQTY + ` (${boxQTY})` + `</td>`
                                         + `<td>` + temp.loadAmount + `</td>`
                                         + `<td>` + temp.usage + `</td>`
-                                        + `<td>` + `<div class="input-group"><input type="text" class="form-control" placeholder="수량" value="` + calInputAmount + `"></div>` + `</td>`
+                                        + `<td>` + `<div class="input-group"><input type="text" class="form-control" placeholder="수량" onclick="onclickInput(this)"></div>` + `</td>`
                                         + `<td>` + `<button type="button" class="btn btn-success btn-sm" onclick="enrollPart(this)"><i class="fas fa-check"></i></button>` + `</td>`
                                         + `<td class="table-warning">` + temp.stock + `</td>`
                                     tr.innerHTML = html;
@@ -353,6 +359,30 @@
                                     + `<td>` + Math.ceil(temp.quantity / temp.loadAmount) + `</td>`;
                                 tbody.append(tr);
                             }
+                        }
+                    }
+
+                    async function  onclickInput(element) {
+                        console.log(element)
+                        let tr = element.parentNode.parentNode.parentNode;
+                        console.log(tr)
+                        let tdList = tr.children;
+                        console.log(tdList)
+                        let bwCode = tdList[8].innerText;
+                        console.log(bwCode);
+
+                        const url = "/api/task/part-stock/inventory/" + bwCode;
+                        let response = await fetch(url);
+                        if (response.status == 200) {
+                            let data = await response.json();
+                            console.log(data)
+                            let message = "";
+                            for (let i = 0; i<data.length; i++){
+                                let temp = data[i]
+                                message += `로트 : ${temp.lot}, 적입량 : ${temp.loadAmount}, 수량 : ${temp.stock}\n`
+                            }
+                            let amount = prompt(message, "")
+                            element.value = amount;
                         }
                     }
 
