--- a/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-outgoing.html
+++ b/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-outgoing.html
@@ -295,7 +295,11 @@
                             const url = "/api/task/outgoing/checkPart/" + bwCode + "/" + amount;
                             let response = await fetch(url);
                             if (response.status == 200) {
-                                partList.push({bwCode, amount});
+                                if(partList.findIndex(v => v.bwCode === bwCode) == -1){
+                                    partList.push({bwCode, amount});
+                                } else {
+                                    alert("이미 등록한 자재입니다. 수량은 반영되지 않습니다.")
+                                }
                                 tdList[15].childNodes[0].childNodes[0].disabled = true;
                                 tdList[16].childNodes[0].disabled = true;
                             } else {
@@ -311,8 +315,16 @@
                         if (partList.length != 0) {
                             let tableRow = document.getElementById("inquireTableRow")
                             removeAllNode(tableRow);
-
                             visibleElement("submitTableRow");
+
+                            partList.sort(function(a, b){
+                                const upperCaseA = a.bwCode.toUpperCase();
+                                const upperCaseB = b.bwCode.toUpperCase();
+
+                                if(upperCaseA > upperCaseB) return 1;
+                                if(upperCaseA < upperCaseB) return -1;
+                                if(upperCaseA === upperCaseB) return 0;
+                            })
 
                             let tbody = document.getElementById("submitTbody");
 
@@ -368,18 +380,17 @@
                         console.log(tr)
                         let tdList = tr.children;
                         console.log(tdList)
-                        let bwCode = tdList[8].innerText;
+                        let bwCode = tdList[10].innerText;
                         console.log(bwCode);
 
                         const url = "/api/task/part-stock/inventory/" + bwCode;
                         let response = await fetch(url);
                         if (response.status == 200) {
                             let data = await response.json();
-                            console.log(data)
                             let message = "";
                             for (let i = 0; i<data.length; i++){
                                 let temp = data[i]
-                                message += `로트 : ${temp.lot}, 적입량 : ${temp.loadAmount}, 수량 : ${temp.stock}\n`
+                                message += `로트 : ${temp.lot}, 적입량 : ${temp.loadAmount}, 수량 : ${temp.stock}, 박스량 : ${temp.stock/temp.loadAmount}\n`
                             }
                             let amount = prompt(message, "")
                             element.value = amount;
