--- a/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-part-stock.html
+++ b/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-part-stock.html
@@ -53,8 +53,7 @@
                 </div>
 
                 <div class="row justify-content-center">
-                    <div class="row col-9">
-                        <div class="col" style="overflow:auto; overflow-x: hidden; height: 70vh">
+                        <div class="col">
                             <table class="table table-striped">
                                 <thead>
                                 <tr>
@@ -74,7 +73,7 @@
                                 </tbody>
                             </table>
                         </div>
-                        <div class="col-4">
+                        <div class="col-5">
                             <table class="table table-striped">
                                 <thead>
                                 <tr>
@@ -88,12 +87,12 @@
                                 </tbody>
                             </table>
                         </div>
-                    </div>
+
                 </div>
             </div>
 
             <div class="row justify-content-center" style="visibility: hidden">
-                <div class="col" style="overflow:auto; overflow-x: hidden; height: 70vh">
+                <div class="col">
                     <table class="table table-striped" id="excelTable">
                         <thead>
                         <tr>
@@ -112,9 +111,6 @@
         </div>
         <!-- /.container-fluid -->
     </div>
-    <!-- Footer -->
-    <footer th:replace="fragments/footer.html :: fragment-footer">
-    </footer>
 
 </div>
 <!-- End of Main Content -->
